projects/imc/frontend/css/style.css
.no-padding { padding: 0 !important }
.no-padding-bottom { padding-bottom: 0 !important }
.no-padding-top { padding-top: 0 !important }
.no-padding-left { padding-left: 0 !important }
.no-padding-right { padding-right: 0 !important }

.no-border { border-width: 0 }
.no-border-bottom { border-bottom-width: 0 }
.no-border-top { border-top-width: 0 }
.no-border-left { border-left-width: 0 }
.no-border-right { border-right-width: 0 }

.space { max-height: 1px; min-height: 1px; overflow: hidden; margin: 12px 0 }
[class*=vspace-] { display: none }
.space-8 { max-height: 1px; min-height: 1px; overflow: hidden; margin: 12px 0; margin: 8px 0 7px }
[class*=vspace-8] { max-height: 1px; min-height: 1px; overflow: hidden; margin: 12px 0; margin: 8px 0 7px 0 }
.space-4 { max-height: 1px; min-height: 1px; overflow: hidden; margin: 12px 0; margin: 4px 0 3px }
[class*=vspace-4] { max-height: 1px; min-height: 1px; overflow: hidden; margin: 12px 0; margin: 4px 0 3px 0 }
.space-2 { max-height: 1px; min-height: 1px; overflow: hidden; margin: 12px 0; margin: 2px 0 1px }
[class*=vspace-2] { max-height: 1px; min-height: 1px; overflow: hidden; margin: 12px 0; margin: 2px 0 1px 0 }
.space-0, [class*=vspace-0] { max-height: 1px; min-height: 1px; overflow: hidden; margin: 12px 0; margin: 0 }

/* colours */
.green { color: #69aa46 !important }
.light-green { color: #b0d877 !important }
.dark { color: #333 !important }
.white { color: #fff !important }
.red { color: #dd5a43 !important }
.red2 { color: #e08374 !important }
.orange { color: #ff892a !important }
.orange2 { color: #feb902 !important }
.light-orange { color: #fcac6f !important }
.grey { color: #8c8c8c !important }
.light-grey { color: #bbb !important }
.blue { color: #478fca !important }
.light-blue { color: #93CBF9 !important }
.brown { color: #603913 !important }
.light-brown { color: #cbb69d !important }

.bigger-110 { font-size: 110% !important }
.bigger-180 { font-size: 180% !important }

h4.smaller { font-size: 17px; }

.imc-scroll { overflow: hidden }

button:focus {outline:0 !important;}
.container-search .btn-accent {
  background: #53b8e2;
  border: 1.5px solid #53b8e2;
}
.container-search .btn-accent:hover {
  background: transparent;
  color: #53b8e2;
}

.btn>.icon-only.imc-icon {
    margin: 0!important;
    text-align: center;
    padding: 0;
}
.imc-icon { text-align: center }

.hr { 
  display: block;
  height: 0;
  overflow: hidden;
  font-size: 0;
  border-width: 1px 0 0 0;
  border-top: 1px solid #E3E3E3;
  margin: 12px 0;
  border-top-color: rgba(0, 0, 0, .11)
}
.hr.dotted, .hr-dotted { border-style: dotted }
.hr-24, .hr24 { margin: 24px 0 }

.label.label-app {
    position: relative;
}

.badge {
	position: absolute!important;
    top: -4px;
    right: -15px;
    padding: 1px 3px;
    text-align: center;
    font-size: 12px;
    color: #FFF;
    border-radius: 4px;
}
.badge-warning, .badge.badge-warning { background-color: #f89406; }
.label-location, .badge-location { background-color: #603913; }
.label-term, .badge-term { background-color: #cbb69d; }

.search-thumbnail {
    -webkit-transition-duration: .1s;
    transition-duration: .1s;
}

.search-thumbnail:hover {
	border-color: #75A8CE
}

.search-thumbnail .search-title {
	margin-top: 25px;
	overflow-wrap: break-word;
}

.media .media-content {
	margin-left: 90px;
	display: block;
	width: 80%;
	max-height: 80px;
}

.media .media-content .anno-info {
	max-height: 80px;
	overflow-y: auto;
}
.media .media-content .anno-info>ul>li { padding: 0px; }
.media .media-content .anno-info .list-inline>li {
	padding: 0px 0px 0px 5px !important;
}

.media .media-content .shot-info h4 {
	cursor: pointer;
}

.search-results {
	padding: 24px 12px;
	min-height: 20px
}

.search-result {
	margin-top: -1px;
	position: relative;
	padding: 12px;
	border: 1px dotted;
	border-color: #DDD #FFF #FFF;
	border-color: rgba(0, 0, 0, .11) transparent transparent
}

.search-result:hover {
	background-color: #F7F7F7;
	border-color: #D6E1EA;
	border-style: solid;
	z-index: 1
}

.search-result:first-child {
	border-top-color: transparent
}

.search-result:first-child:hover {
	border-top-color: #D6E1EA
}

.search-result .search-title {
	font-size: 16px;
	margin-top: 0;
	margin-bottom: 6px
}

.search-result .search-content {
	margin-top: 2px
}

.media-image-wrapper {
	position: relative;
}

search-thumbnail div .media-image-wrapper {
  justify-content: center;
  display: flex;
}

.search-item.label {
    position: absolute;
    bottom: -30px;
    left: 0;
    right: 0;
    top: auto;
}
.label {
    display: inline;
    padding: .2em .6em .3em;
    font-size: 75%;
    font-weight: 700;
    line-height: 1;
    color: #fff;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: .25em;
}

.media, .media-body {
    zoom: 1;
}

.media-heading {
    /*margin-top: 0;
    margin-bottom: 5px;*/
    display: inline;
}

.media-thumbnail .text .imc-icon:first-child,
.media .text .imc-icon:first-child,
.media .search-actions .imc-icon:first-child {
	color: #bbb; margin-right: 4px
}


.media-thumbnail {
    padding: 4px;
    line-height: 1.42857143;
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 4px;
    -webkit-transition: border .2s ease-in-out;
    -o-transition: border .2s ease-in-out;
    transition: border .2s ease-in-out;
    margin-bottom: 10px;
}

.media-thumbnail .caption {
    padding: 9px;
    color: #333;
}

.media-thumbnail .caption .label-city {
	z-index: 1;
	position: relative;
}

.media-thumbnail .text {
	display: block;
    display: -webkit-box;
    max-width: 400px;
    height: 100px;
    margin: 0 auto;
    line-height: 1.2;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}


/*.irs-line-mid, .irs-line-left, .irs-line-right, .irs-bar, .irs-bar-edge, .irs-slider {
    background: #53b8e2;
}*/

.irs-bar {
    background: #53b8e2;
}

.irs-from:after, .irs-to:after, .irs-single:after {
    border-top-color: #53b8e2;
}

.irs-from, .irs-to, .irs-single {
    background: #53b8e2;
}

.irs-slider {
  top: 20px;
  background: #F8F8F8;
  border: 1px solid;
  cursor: pointer;
  display: inline-block;
  width: 1.45em;
  height: 1.45em;
  position: absolute;    
  -moz-border-radius: 0px;
  -webkit-border-radius: 0px;
  border-radius: 0;
  line-height: 2.2em;
  text-align: center;
  border-color: #4AA4CE !important;
  outline: 0 !important;
}

.irs-slider:after, .irs-slider:before {
    display: block;
    content: "";
    position: absolute;
    top: 6px;
    left: 7px;
    width: 4px;
    height: 8px;
    border: 1px solid;
    border-width: 0 1px;
    border-color: inherit
}

.irs-slider:after {
    left: 10px;
    border-width: 0 1px 0 0
}

.irs-slider:hover {
    background-color: #FFF
}

.irs-slider:active, .irs-slider:focus, .irs-slider:hover {
    outline: 0;
    -webkit-box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .3);
    box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .3)
}

